Feature: Adding docker-compose logic. FIX: Updating configurations.

--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,28 +1,116 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-chefe
+  name: ingress-eureka
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: chefe-service.local
+    - host: eureka-service.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: chefe-service
+                name: eureka-service
                 port:
                   number: 8080
-    - host: receita-service.local
+    - host: eureka-service.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: receita-service
+                name: eureka-service
                 port:
                   number: 8080
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-imovel
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+    - host: imovel-service.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: imovel-service
+                port:
+                  number: 8080
+    - host: imovel-service.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: imovel-service
+                port:
+                  number: 8080
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-status
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+    - host: status-service.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: status-service
+                port:
+                  number: 8080
+    - host: status-service.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: status-service
+                port:
+                  number: 8080
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-veiculo
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+    - host: veiculo-service.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: veiculo-service
+                port:
+                  number: 8080
+    - host: veiculo-service.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: veiculo-service
+                port:
+                  number: 8080
+---
