--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and push images with Docker Compose
         run: |
-          docker build -t my-docker-image:latest .
-          docker tag my-docker-image:latest my-dockerhub-username/my-repo:latest
-          docker push my-dockerhub-username/my-repo:latest
+          docker-compose -f compose/docker-compose.yml build
+          docker-compose -f compose/docker-compose.yml push
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
