--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,39 +1,79 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chefe-service
+  name: eureka-service
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: chefe-service
+      app: eureka-service
   template:
     metadata:
       labels:
-        app: chefe-service
+        app: eureka-service
     spec:
       containers:
-        - name: chefe-service
-          image: meu-registry/chefe-service:latest
+        - name: eureka-service
+          image: joaofigueredo/eureka-service:latest
           ports:
             - containerPort: 8080
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: receita-service
+  name: imovel-service
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: receita-service
+      app: imovel-service
   template:
     metadata:
       labels:
-        app: receita-service
+        app: imovel-service
     spec:
       containers:
-        - name: receita-service
-          image: meu-registry/receita-service:latest
+        - name: imovel-service
+          image: joaofigueredo/imovel-service:latest
+          ports:
+            - containerPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: status-service
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: status-service
+  template:
+    metadata:
+      labels:
+        app: status-service
+    spec:
+      containers:
+        - name: status-service
+          image: joaofigueredo/status-service:latest
+          ports:
+            - containerPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: veiculo-service
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: veiculo-service
+  template:
+    metadata:
+      labels:
+        app: veiculo-service
+    spec:
+      containers:
+        - name: veiculo-service
+          image: joaofigueredo/veiculo-service:latest
           ports:
             - containerPort: 8080
