--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chefe-service
+  name: eureka-service
 spec:
   selector:
-    app: chefe-service
+    app: eureka-service
   ports:
     - protocol: TCP
       port: 8080
@@ -13,10 +13,34 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: receita-service
+  name: imovel-service
 spec:
   selector:
-    app: receita-service
+    app: imovel-service
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: status-service
+spec:
+  selector:
+    app: status-service
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: veiculo-service
+spec:
+  selector:
+    app: veiculo-service
   ports:
     - protocol: TCP
       port: 8080
