--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,30 +14,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      # Login to DockerHub
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push Docker images with Docker Compose
       - name: Build and push images with Docker Compose
         run: |
           docker-compose -f compose/docker-compose.yml build
           docker-compose -f compose/docker-compose.yml push
 
-      # Set up kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
         with:
           version: 'latest'
 
-      # Deploy to Kubernetes
       - name: Deploy to Kubernetes
         run: |
           kubectl apply -f k8s/deployment.yaml
