--- a/veiculo-service/docker/Dockerfile
+++ b/veiculo-service/docker/Dockerfile
@@ -2,4 +2,5 @@ FROM amazoncorretto:21
 LABEL maintainer="joaofigueredo"
 WORKDIR /app
 COPY veiculo-service-0.0.1-SNAPSHOT.jar /app/app.jar
+EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
